# Eidetic-Plus

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  EIDETIC_PLUS_BENCHMARK_SPEC.md  EIDETIC_PLUS_DREAMING_ENGINE.md  EIDETIC_PLUS_OPTIMIZATION_PLAYBOOK.md  EIDETIC_PLUS_UPGRADE_SPEC.md  Eidetic-Plus_Master_Dossier.md  LICENSE  README.md  pyproject.toml  requirements-bench.txt  requirements.txt  run.sh
.claude-plugin/: marketplace.json  plugin.json
bench/: ARCHITECTURE_PROPOSALS.md  COST_AB.md  COST_ROADMAP.md  DOMINANCE_PROGRESS.md  FAILURES_allon_n40.md  FAST_LOOP.md  HANDOFF.md  README.md  RESULTS_allon_n40.md  RESULTS_allon_n5.md  RESULTS_locomo_n40.md  RESULTS_metabolism_multisession_n20.md  RESULTS_metabolism_multisession_n6.md  SLICE6_PLAN.md  WEAKNESS_QUEUE.md  WINGS_PROGRESS.md  __init__.py  affect_salience_invariant.py  audit_no_holdout_leakage.py  build_ablation_report.py  build_holdout_registry.py  calibrate.py  calibration_handoff.py  claim_scope.py  compare.py  cost_report.py  crystal_demotion_invariant.py  curves.py  demo_war_room.sh  dual_timestamp_probe.py  fingerprints.py  forensics.py  form_floor_matrix.sh  gate.py  guard.py  halumem.py  harness.py  holdout_reference_exemptions.json  holdout_rotation_state.json  index_timing.py  (+48 more)
docs/: HACKATHON.md  JUDGES.md  PUBLIC_CLAIMS.md  architecture.md  best-memory-agent.md  claims.md  connected-brain-loop.md  fastest-best-agent.md  mcp.md  multi-view-retrieval.md  notebooklm.md  optimization.md  self-healing.md
eidetic/: __init__.py  abstention.py  activation.py  api.py  bm25.py  brain.py  config.py  conflicts.py  dashscope_client.py  debate.py  doctor.py  embed_cache.py  engine.py  errors.py  events.py  extract_cache.py  feedback.py  fsrs.py  graph.py  ingestion.py  lifecycle.py  mcp_server.py  memory_types.py  models.py  preferences.py  problems.py  proofs.py  store.py  (+11 more)
(+1099 files in other folders)
